lol added some copy from Keith eating the menu at Cheesecake Factory

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cheesecake Factory</title>
 </head>
 <body>
-    
+    <h1 class="">If you like peanuts...</h1>
+    <h2 class="">THERE'S the peanut flavor I've been looking for.</h2>
 </body>
 </html>
